--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	
 		<link href="./_app/immutable/assets/0.OuuCujrK.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C11EmnFh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BFwHjpa1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DlsY2CYg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B5WG8Tyl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D_dD_TJi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DSDUSdX0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/JH1jd5vr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BrqfOuvJ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ga4jH3fG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D5HN7FvC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DvmnNaZx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CM8dx4Hy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-Zgb1N9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BHXjieB-.js">
@@ -20,7 +20,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/BniEzjfo.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B7CD-ELg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CW7cwOqM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dx6qyqWG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CaVz1mwy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GPTkdWdS.js"><!--12qhfyh--><meta name="description" content="Portfolio of Pranav Agarkar - Fullstack Developer specializing in Django, React, and Svelte"/> <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/> <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&amp;family=Unbounded:wght@400;600;700&amp;display=swap" rel="stylesheet"/><!----><title>Pranav Agarkar | Fullstack Developer</title>
 </head>
 
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_1pp292z = {
+					__sveltekit_koze2b = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/portfolio-svelte"
 					};
@@ -49,8 +49,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BFwHjpa1.js"),
-						import("./_app/immutable/entry/app.Ga4jH3fG.js")
+						import("./_app/immutable/entry/start.B5WG8Tyl.js"),
+						import("./_app/immutable/entry/app.DvmnNaZx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
