--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.B05QnGRz.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.CUwd2qrC.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C11EmnFh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.wAB1g6Ln.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BkMThgrw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Cds1p8iN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ce5HW7Fk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DSDUSdX0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/JH1jd5vr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C3dklvu0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CV0UNxd-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CxdIhsdL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B2vusbS4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CM8dx4Hy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-Zgb1N9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BHXjieB-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BoPlg1Ba.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BniEzjfo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DCV3L3GO.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.P6fjjwPX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CW7cwOqM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BVOTDhGR.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CS_5_euz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GPTkdWdS.js"><!--12qhfyh--><meta name="description" content="Portfolio of Pranav Agarkar - Fullstack Developer specializing in Django, React, and Svelte"/> <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/> <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&amp;family=Unbounded:wght@400;600;700&amp;display=swap" rel="stylesheet"/><!----><title>Pranav Agarkar | Fullstack Developer</title>
 </head>
 
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_14r66t5 = {
+					__sveltekit_1r1ce0t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/portfolio-svelte"
 					};
@@ -49,8 +49,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.wAB1g6Ln.js"),
-						import("./_app/immutable/entry/app.CV0UNxd-.js")
+						import("./_app/immutable/entry/start.Cds1p8iN.js"),
+						import("./_app/immutable/entry/app.B2vusbS4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
