--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	
 		<link href="./_app/immutable/assets/0.B2Xyc9p5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.Fl76A9Lh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C7lzjcLQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/JnXmW67X.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DZXbM-gJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DowumKYh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/UrxO4oa7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuXA2gK9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ckj1MYRV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BfMU2GmI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DXs_6bW_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ba-I7XqY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVNc2Stl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5DPCyE1T.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cbijp57i.js">
@@ -21,7 +21,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcWsR_na.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B7nO_inR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DP05Upsa.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CEHfVxcs.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BTbwSK9N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B-_JQjo-.js"><!--12qhfyh--><meta name="description" content="Portfolio of Pranav Agarkar - Fullstack Developer specializing in Django, React, and Svelte"/> <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/> <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&amp;family=Unbounded:wght@400;600;700&amp;display=swap" rel="stylesheet"/><!----><!--1uha8ag--><meta name="title" content="Pranav Agarkar | Fullstack Developer"/> <meta name="description" content="Building secure, scalable applications from frontend to backend. Experienced in building secure, scalable applications with Django, React, Svelte, and Go."/> <meta name="keywords" content="Svelte, SvelteKit, Django, Go, Full Stack Developer, Portfolio, Pranav Agarkar, Web Development, TaskVault, BeamSync"/> <meta name="author" content="Pranav Agarkar"/> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="robots" content="index, follow"/> <meta property="og:type" content="website"/> <meta property="og:url" content="https://pranavagarkar07.github.io/portfolio-svelte/"/> <meta property="og:title" content="Pranav Agarkar | Fullstack Developer"/> <meta property="og:description" content="Building secure, scalable applications from frontend to backend. Experienced in building secure, scalable applications with Django, React, Svelte, and Go."/> <meta property="og:image" content="https://pranavagarkar07.github.io/portfolio-svelte/avatar.png"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:url" content="https://pranavagarkar07.github.io/portfolio-svelte/"/> <meta property="twitter:title" content="Pranav Agarkar | Fullstack Developer"/> <meta property="twitter:description" content="Building secure, scalable applications from frontend to backend. Experienced in building secure, scalable applications with Django, React, Svelte, and Go."/> <meta property="twitter:image" content="https://pranavagarkar07.github.io/portfolio-svelte/avatar.png"/> <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_188fs9q = {
+					__sveltekit_1t5z22d = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/portfolio-svelte"
 					};
@@ -65,8 +65,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C7lzjcLQ.js"),
-						import("./_app/immutable/entry/app.BfMU2GmI.js")
+						import("./_app/immutable/entry/start.DZXbM-gJ.js"),
+						import("./_app/immutable/entry/app.Ba-I7XqY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
